--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
 jar {
-	baseName = 'item'
+	baseName = 'CloudDemoItem'
 	version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
