--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,2 +1,3 @@
 spring.cloud.config.uri: http://localhost:8888
 spring.application.name: item-service
+eureka.client.service-url.defaultZone: http://discovery:8761/eureka/
